2.1-beta 19  (8 Jul 07)
===========
- sleep interpreter now performs better stack hygeine to prevent 
  exceptions and errors from corrupting the stack inadvertently.

2.1-beta 18  (5 Jul 07)
===========
- added scalar references: \$x is equivalent to $x => $x.  this sugar
  was added for the common case of passing a key/value pair to copy a
  scalar into the local/this environment of a function.
- added a srand(long) function for seeding the Sleep random number
  generator.   %RANDOM% in the script environment contains the random
  number generator reference.
- Sleep now evaluates text within a back ticks as an expression to
  execute.  The expression returns an array with the output printed by
  the executed command.  Execution errors and non-zero process termination
  value are available via checkError()
- Scalar hashes can now be passed to Java methods expecting an Object
  value (if desired)
- character arrays returned by Java calls will now be converted to a 
  Sleep string
- Sleep strings will now be recognized as valid matches for Java methods
  requesting a byte[] or char[] parameter.
- Sleep scalars returned by Java calls will be returned as is.
- improved performance (x3) of Sleeps internal functions to convert a 
  String to a non-mangled byte array. 
- &remove now returns data structure data was removed from
- extended &add to accept a hash and multiple key/value pairs for
  adding stuff to an existing hash.
- Sleep's set operations removeAll, retainAll, and addAll now work based
  on scalar identity in lieu of string representation
- Added "in" operator to check if a scalar with same identity is contained 
  within an iteratable data structure (generator function / array)
- Added =~ for comparing two scalars by identity (scalar that reference
  something are identical if their references match, other scalars are
  identical if their string reps match).
- fixed a bug causing import to crash parser when no package was specified